apps/kustomization/app1/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-kubernetes-1
  template:
    metadata:
      labels:
        app: hello-kubernetes-1
    spec:
      securityContext:
        runAsUser: 1000
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.9
        ports:
        - containerPort: 8080
