apps/kustomization/app1/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-svc-1
spec:
  type: ClusterIP
  ports:
  - name: hello-kubernetes-port
    port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes-1
